--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
 
     steps:
     - name: 1. Setup User and Password
+      shell: cmd
       run: |
         echo Y | net user RDP-User "PassWord@123#2025" /add
         net localgroup "Remote Desktop Users" RDP-User /add
@@ -30,4 +31,3 @@ jobs:
         Write-Host "RDP is ready. You can now connect."
         Write-Host "This session will remain active for approximately 5 hours and 50 minutes."
         Start-Sleep -Seconds 21000
-   
